things aligned correctly

--- a/src/app/todo/todo.component.css
+++ b/src/app/todo/todo.component.css
@@ -30,6 +30,7 @@
 
 .task {
   flex: 1;
+  padding: 5px;
 }
 
 .complete {
